PO Request Invoice is now working

--- a/Views/Admin/CustomerReport.cshtml
+++ b/Views/Admin/CustomerReport.cshtml
@@ -104,20 +104,20 @@
                             <tbody>
                                 @foreach (var item in Model.CustomerReportModelList)
                                 {
-                                    <tr>
-                                        <td></td>
-                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.NoOfEnqRcv)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.NoOfLneItm)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.QuotedEnq)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.QuotedLneItm)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.QuotedValue)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.TAT)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POReceived)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POValue)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Delivery)</td>
-                                        <td>Send</td>
-                                    </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.NoOfEnqRcv)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.NoOfLneItm)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.QuotedEnq)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.QuotedLneItm)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.QuotedValue)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.TAT)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POReceived)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POValue)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Delivery)</td>
+                                    <td>@Html.EncodedActionLink("Send", "SendCustomerWeeklyReport", "Admin", new { id = item.Id }, new { @class = "", title = "Send", @target = "_blank" })</td>
+                                </tr>
                                 }
                             </tbody>
                         </table>
