--- a/Views/Admin/WeeklyCustomerReportSend.cshtml
+++ b/Views/Admin/WeeklyCustomerReportSend.cshtml
@@ -111,7 +111,7 @@
                                         @Html.TextBoxFor(m => m.WeeklyCustomerReportSendModels.Email1,
                                 new
                                 {
-                                    @class = "form-control text-uppercase",
+                                    @class = "form-control text-lowercase",
                                     placeholder = "Enter " + @Html.DisplayNameFor(m => m.WeeklyCustomerReportSendModels.Email1)
                                 })
                                         @Html.ValidationMessageFor(m => m.WeeklyCustomerReportSendModels.Email1, "",
@@ -124,7 +124,7 @@
                                         @Html.TextBoxFor(m => m.WeeklyCustomerReportSendModels.Email2,
                                 new
                                 {
-                                    @class = "form-control text-uppercase",
+                                    @class = "form-control text-lowercase",
                                     placeholder = "Enter " + @Html.DisplayNameFor(m => m.WeeklyCustomerReportSendModels.Email2)
                                 })
                                         @Html.ValidationMessageFor(m => m.WeeklyCustomerReportSendModels.Email2, "",
@@ -137,7 +137,7 @@
                                         @Html.TextBoxFor(m => m.WeeklyCustomerReportSendModels.Email3,
                                 new
                                 {
-                                    @class = "form-control text-uppercase",
+                                    @class = "form-control text-lowercase",
                                     placeholder = "Enter " + @Html.DisplayNameFor(m => m.WeeklyCustomerReportSendModels.Email3)
                                 })
                                         @Html.ValidationMessageFor(m => m.WeeklyCustomerReportSendModels.Email3, "",
@@ -150,7 +150,7 @@
                                         @Html.TextBoxFor(m => m.WeeklyCustomerReportSendModels.Email4,
                                 new
                                 {
-                                    @class = "form-control text-uppercase",
+                                    @class = "form-control text-lowercase",
                                     placeholder = "Enter " + @Html.DisplayNameFor(m => m.WeeklyCustomerReportSendModels.Email4)
                                 })
                                         @Html.ValidationMessageFor(m => m.WeeklyCustomerReportSendModels.Email4, "",
