--- a/Views/Admin/VenSource.cshtml
+++ b/Views/Admin/VenSource.cshtml
@@ -100,8 +100,7 @@
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="box-tools pull-left">
-                                <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
-                                        value="search">
+                                <button type="submit" name="search" class="btn bg-aqua" title="SEARCH">
                                     SEARCH
                                 </button>
                             </div>
@@ -168,7 +167,7 @@
             </div>
         </div>
         <!-- danger with sound -->
-        <div class="message-box animated fadeIn" data-sound="alert" id="mb-sub-confirm">
+        @*<div class="message-box animated fadeIn" data-sound="alert" id="mb-sub-confirm">
             <div class="mb-container">
                 <div class="mb-middle">
                     <div class="mb-title"><span class="fa fa-warning"></span> Confirm <strong>Box</strong> ?</div>
@@ -186,57 +185,8 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
         <!-- end danger with sound -->
-        <div class="row">
-            <div class="modal fade" id="updateModel">
-                <div class="modal-dialog modal-lg">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">×</span>
-                            </button>
-                            <h4 class="modal-title">Update</h4>
-                        </div>
-                        <div class="modal-body m-t-20">
-                            @Html.HiddenFor(model => model.EnquiryModels.EnqPId)
-                            <div class="col-md-12">
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="form-group">
-                                        <label>Product</label>
-                                        <textarea id="product" name="product" placeholder="Enter Product name" rows="5" cols="50" class="form-control mprod"></textarea>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="form-group">
-                                        <label>Model No.</label>
-                                        <textarea id="modelno" name="modelno" placeholder="Enter model no." rows="5" cols="50" class="form-control mmodel"></textarea>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                @*<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                        <div class="form-group">
-                                            <label>Specification</label>
-                                            <textarea id="specification" name="specification" placeholder="Enter Specification" rows="5" cols="50" class="form-control mspec"></textarea>
-                                        </div>
-                                    </div>*@
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="form-group">
-                                        <label>Brand</label><br />
-                                        @Html.DropDownListFor(m => m.BrandId, new SelectList(Model.BrandModelList, "Key", "Value"),
-                                        "--Select Brand--", new { @class = "form-control select2 mbrndid" })
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <a href="javascript:void(0)" class="btn btn-primary updpmb">Save changes</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     }
 </section>
 <!-- /.content -->
