--- a/Views/Admin/WeeklyCustomer.cshtml
+++ b/Views/Admin/WeeklyCustomer.cshtml
@@ -2,7 +2,7 @@
 @model Vendor_Indusuno.ViewModels.WeeklyCustomerViewModel
 @{
     ViewBag.Title = "Weekly Customer";
-    TempData["Dashboard"] = "active";
+    TempData["Customer"] = "active";
     TempData["WeeklyCustomer"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
